--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "formidable": "^1.0.17",
+    "fs": "0.0.2",
+    "jQuery": "^1.7.4",
+    "jquery": "^3.1.0",
+    "multer": "^1.2.0",
+    "path": "^0.12.7"
   }
 }
